2001-10-31  Matt Wilson  <msw@redhat.com>

	* gtk/gtktreedatalist.c (_gtk_tree_data_list_alloc): after
	allocating the treedatalist, zero it to make sure the values are
	cleared from any garbage that was in this chunk.

2001-10-31  Murray Cumming  <murrayc@usa.net>

	* gtk/cellrenderertext.h: "edited" default signal handler
	gchar* args are now const.
	gtk/cellrenderertoggle.h: "toggled" default signal handler
	gchar* arg is now const.
	Also changed other signal handlers for "edited" and "toggled" to
	have the same signature.

Tue Oct 30 19:17:57 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_sort_level): massize
	rewrite.  Static models now totally work.  I'm not 100% sure about
	row_inserted and row_changed, but I'll get those later.

2001-10-30  Sven Neumann  <sven@gimp.org>

	* configure.in: use GLIB_AC_DIVERT_BEFORE_HELP() so we get proper
	output for configure --help.

2001-10-30  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextview.c (changed_handler): Update the IM spot location
	here, if text was invalidated in the visible area, because the
	scroll offset doesn't normally change in that case, and the mark
	isn't set, just implicitly moved over as text is added/removed
	
Mon Oct 29 19:18:35 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkseparatormenuitem.c: Code cleanup.
	(gtk_separator_menu_item_class_init): Fix bugs in this code.

2001-10-29  jacob berkman  <jacob@ximian.com>

	* gdk/Makefile.am (LDFLAGS): 
	* gtk/Makefile.am (LDFLAGS): automake doesn't support conditionalized
	LDFLAGS, so put win32 flags in here

Mon Oct 29 15:41:58 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_sort_level): Darn.
	I can't believe this took this long to fix.

Mon Oct 29 13:54:49 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_rows_reordered): fix
	reordered signal.

Mon Oct 29 12:27:51 2001  Owen Taylor  <otaylor@redhat.com>
